<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status_location"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@android:color/holo_purple"
        android:padding="7dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/around_cases"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:padding="5dp"/>

    <EditText
        android:id="@+id/distance_range"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_distance"
        android:textSize="18sp"
        android:layout_margin="7dp"
        android:inputType="number"
        android:background="@drawable/button_background"
        android:padding="15dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/search_range"
        android:layout_width="125dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_margin="15dp"
        android:background="@drawable/button_background"
        android:text="@string/search"
        android:textSize="18sp"
        android:layout_height="wrap_content"/>

</LinearLayout>