<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_background"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_margin="10dp"
            android:id="@+id/profile_language"
            android:layout_width="50dp"
            android:layout_gravity="end"
            android:layout_height="50dp"
            android:src="@drawable/language_icon"
            android:background="@drawable/layout_background"
            android:padding="5dp"
            android:foreground="?android:attr/selectableItemBackground"
            />

    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:hint="@string/full_name"
                android:inputType="textCapWords"
                android:maxLength="70"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/user_age"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:inputType="number"
                android:maxLength="3"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/gender"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/user_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/others"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/others"
                android:textSize="16sp" />

        </RadioGroup>

        <Button
            android:id="@+id/save_profile_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/loginButton"
            android:foreground="?android:attr/selectableItemBackground"
            android:soundEffectsEnabled="true"
            android:text="@string/save"
            android:textColor="@android:color/white" />

    </LinearLayout>
    </LinearLayout>
</ScrollView>