<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".ContributeFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="10sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/blue"
        android:text="@string/donate_cm"
        android:gravity="center"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/scan_and_pay"
            android:layout_width="250dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/scan_pay"
            android:textColor="@android:color/white"
            />

        <Button
            android:id="@+id/account_details"
            android:layout_marginTop="25dp"
            android:layout_width="250dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/account_details"
            android:textColor="@android:color/white"
            />

        <Button
            android:id="@+id/donate_cheque"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/donate_cheque"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"/>

        <Button
            android:id="@+id/donate_website"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/donate_website"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"/>

    </LinearLayout>
    </ScrollView>

</LinearLayout>
