<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".CovidPortalActivity">

    <LinearLayout
        android:id="@+id/positive_header"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/go_home_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/back_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/covid_portal"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/positive_header"
        android:background="@drawable/covid_background">


        <LinearLayout
            android:id="@+id/emergency_layout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/emergency"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/call_emergency"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:src="@drawable/call_logo" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/positive_footer"
            android:layout_below="@id/emergency_layout">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/upload_location_to_db"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/button_background"
                        android:backgroundTint="@android:color/holo_red_light"
                        android:text="@string/loc_upload"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/suffering"
                        android:textColor="@android:color/black" />

                    <Button
                        android:id="@+id/go_to_home_quarantine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/button_background"
                        android:backgroundTint="@android:color/holo_red_light"
                        android:text="@string/home_quarantine"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/follow_home"
                        android:textColor="@android:color/black" />

                    <Button
                        android:id="@+id/read_faqs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/button_background"
                        android:backgroundTint="@android:color/holo_red_light"
                        android:text="@string/covid_qas"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/read_faqs_here"
                        android:textColor="@android:color/black" />
                </LinearLayout>
            </ScrollView>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/positive_footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/loc_mod_rem"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/report_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/click_here"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>