<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/view_in_maps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:background="@drawable/profile_background"
        android:textSize="20sp"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/nearest_government"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/government"
        android:textSize="20sp"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@android:color/black"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:id="@+id/nearest_private"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privates"
        android:textSize="20sp"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@android:color/black"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:id="@+id/nearest_gov_pri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/government_private"
        android:textSize="20sp"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@android:color/black"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"/>

</LinearLayout>